public/stylesheets/application.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
.logo {
  width: 310px;
  text-align: center;
}
.logo img {
  margin: auto;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

.overlay {
  position: absolute;
  z-index: 999;
  width: 310px;
  height: 200px;
}

#map_canvas {
  height: 140px;
  margin-left: 0;
  margin-top: 15px;
  margin-bottom: 15px;
  border: 5px solid #ececec;
  width: 300px;
}

.feed-items .post-body img {
  max-width: 280px;
  position: relative;
  top: -70px;
}

.title {
  font-size: 25px;
  padding: 30px 15px;
  background-color: #626262;
  opacity:0.8;
  z-index: 10;
  position: relative;
}

.title h3 {
  color: white;
  opacity: 1.0;
}

.feed-items li {
  list-style: none;
  background-color: #ececec;
}

.feed-items .post-body, .feed-items .caption {
  margin: 15px;
}

.feed-items {
  width: 310px;
}

#spinner {
  width: 310px;
  display: block;
  padding-top: 30px;
  padding-bottom: 30px;
  padding-left: 140px;
}

body {
  width: 100%;
}

#parapper.wrapper {
  width: 310px;
  margin: auto;
}

@font-face {
    font-family: 'MuseoSlab500';
    src: url('/Museo_Slab_500-webfont.eot');
    src: url('/Museo_Slab_500-webfont.eot?iefix') format('eot'),
         url('/Museo_Slab_500-webfont.woff') format('woff'),
         url('/Museo_Slab_500-webfont.ttf') format('truetype'),
         url('/Museo_Slab_500-webfont.svg#webfontyumMOUTD') format('svg');
    font-weight: normal;
    font-style: normal;

}

body {
  font-family: 'MuseoSlab500';
}

.desc {
  text-align: center;
  width: 310px;
}
.image-post .caption {
  margin-top: -70px;
  padding-bottom: 20px;
}

.foursquare.image-post .caption {
  margin-top: 10px;
  padding-bottom: 20px;
}

h1{
  font-size: 40px;
}

h1 .green {
  color: #bfd73b;
}

.share {
  padding: 20px 20px 100px 95px;
}

.share .facebook {
  float: left;
  width: 50px;
  padding-left: 20px;
}
.share .twitter {
  float: left;
}

